fixed the gap between footer and the front page

--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ li img:hover {
 }
 
 footer {
-	margin-top: 10px;
+	margin-top: 0px;
 	height: 40vh;
 }
 
